:lipstick: Apresentação dos cartões

--- a/flashcards.html
+++ b/flashcards.html
@@ -57,6 +57,7 @@
         --color-wrong: #ff6161;
         --color-highlight: #de128c;
         --color-button-highlight: #f27cc3;
+        --color-overlay: #30303080;
     }
 
     body {
@@ -103,6 +104,7 @@
         height: 100%;
         width: 100%;
         z-index: 2;
+        background-color: var(--color-overlay);
     }
 
     .flip-card-inner {
@@ -138,8 +140,6 @@
         color: var(--color-highlight);
         border: 1px var(--color-background-highlight) solid;
         background-color: var(--color-background-highlight);
-        -webkit-box-shadow: 2px 2px 5px 0px var(--color-background-highlight);
-        box-shadow: 2px 2px 5px 0px var(--color-background-highlight);
 
         display: flex;
         justify-content: center;
@@ -170,6 +170,8 @@
 </style>
 
 <body>
+    <h1>Flash Cards para memorização</h1>
+    <h2>Admninistração Pública</h2>
     <ul>
         <li class="flip-card">
             <div class="flip-card-inner">
@@ -197,80 +199,138 @@
         <li class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tellus nibh, congue a nisl sit
-                        amet, interdum imperdiet tellus</h3>
+                    <h3>Príncipios da Administração Pública descritos na Constituição Federal?</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>Curabitur interdum ex ut massa volutpat, eget consequat lacus imperdiet. Mauris arcu dolor,
-                        blandit ac
-                        ornare vitae, eleifend in magna. Nulla et enim nec ipsum pretium venenatis eu a nulla.
-                        Praesent nec
-                        purus porttitor lacus pharetra laoreet eu quis mauris. Sed fringilla mauris quis ex molestie
-                        egestas.
-                        Aliquam ac ipsum vel lorem tincidunt dapibus sit amet interdum dolor. Vivamus porta volutpat
-                        ante, eget
-                        tempor arcu consequat sed. Aenean vel gravida nulla. Proin facilisis lacinia nisi vitae
-                        rutrum.</p>
+                    <p>
+                        <strong>Constituição Federal - Artigo 37º</strong> administração pública direta e indireta de
+                        qualquer dos Poderes da União, dos Estados, do Distrito Federal e dos Municípios obedecerá aos
+                        <strong>princípios de legalidade, impessoalidade, moralidade, publicidade e
+                            eficiência</strong><br /><br />
+                        <span>
+                            Princípio LIMPE<br />
+                            <strong>L</strong> - Legalidade<br />
+                            <strong>I</strong> - Impessoalidade<br />
+                            <strong>M</strong> - Moralidade<br />
+                            <strong>P</strong> - Publicidade<br />
+                            <strong>E</strong> - Eficiência
+                        </span>
+                    </p>
                 </div>
             </div>
         </li>
         <li class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tellus nibh, congue a nisl sit
-                        amet, interdum imperdiet tellus</h3>
+                    <h3>Príncipios da Administração Pública descritos na Constituição Federal?</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>Curabitur interdum ex ut massa volutpat, eget consequat lacus imperdiet. Mauris arcu dolor,
-                        blandit ac
-                        ornare vitae, eleifend in magna. Nulla et enim nec ipsum pretium venenatis eu a nulla.
-                        Praesent nec
-                        purus porttitor lacus pharetra laoreet eu quis mauris. Sed fringilla mauris quis ex molestie
-                        egestas.
-                        Aliquam ac ipsum vel lorem tincidunt dapibus sit amet interdum dolor. Vivamus porta volutpat
-                        ante, eget
-                        tempor arcu consequat sed. Aenean vel gravida nulla. Proin facilisis lacinia nisi vitae
-                        rutrum.</p>
+                    <p>
+                        <strong>Constituição Federal - Artigo 37º</strong> administração pública direta e indireta de
+                        qualquer dos Poderes da União, dos Estados, do Distrito Federal e dos Municípios obedecerá aos
+                        <strong>princípios de legalidade, impessoalidade, moralidade, publicidade e
+                            eficiência</strong><br /><br />
+                        <span>
+                            Princípio LIMPE<br />
+                            <strong>L</strong> - Legalidade<br />
+                            <strong>I</strong> - Impessoalidade<br />
+                            <strong>M</strong> - Moralidade<br />
+                            <strong>P</strong> - Publicidade<br />
+                            <strong>E</strong> - Eficiência
+                        </span>
+                    </p>
                 </div>
             </div>
         </li>
         <li class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tellus nibh, congue a nisl sit
-                        amet, interdum imperdiet tellus</h3>
+                    <h3>Príncipios da Administração Pública descritos na Constituição Federal?</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>Curabitur interdum ex ut massa volutpat, eget consequat lacus imperdiet. Mauris arcu dolor,
-                        blandit ac
-                        ornare vitae, eleifend in magna. Nulla et enim nec ipsum pretium venenatis eu a nulla.
-                        Praesent nec
-                        purus porttitor lacus pharetra laoreet eu quis mauris. Sed fringilla mauris quis ex molestie
-                        egestas.
-                        Aliquam ac ipsum vel lorem tincidunt dapibus sit amet interdum dolor. Vivamus porta volutpat
-                        ante, eget
-                        tempor arcu consequat sed. Aenean vel gravida nulla. Proin facilisis lacinia nisi vitae
-                        rutrum.</p>
+                    <p>
+                        <strong>Constituição Federal - Artigo 37º</strong> administração pública direta e indireta de
+                        qualquer dos Poderes da União, dos Estados, do Distrito Federal e dos Municípios obedecerá aos
+                        <strong>princípios de legalidade, impessoalidade, moralidade, publicidade e
+                            eficiência</strong><br /><br />
+                        <span>
+                            Princípio LIMPE<br />
+                            <strong>L</strong> - Legalidade<br />
+                            <strong>I</strong> - Impessoalidade<br />
+                            <strong>M</strong> - Moralidade<br />
+                            <strong>P</strong> - Publicidade<br />
+                            <strong>E</strong> - Eficiência
+                        </span>
+                    </p>
                 </div>
             </div>
         </li>
         <li class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tellus nibh, congue a nisl sit
-                        amet, interdum imperdiet tellus</h3>
+                    <h3>Príncipios da Administração Pública descritos na Constituição Federal?</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>Curabitur interdum ex ut massa volutpat, eget consequat lacus imperdiet. Mauris arcu dolor,
-                        blandit ac
-                        ornare vitae, eleifend in magna. Nulla et enim nec ipsum pretium venenatis eu a nulla.
-                        Praesent nec
-                        purus porttitor lacus pharetra laoreet eu quis mauris. Sed fringilla mauris quis ex molestie
-                        egestas.
-                        Aliquam ac ipsum vel lorem tincidunt dapibus sit amet interdum dolor. Vivamus porta volutpat
-                        ante, eget
-                        tempor arcu consequat sed. Aenean vel gravida nulla. Proin facilisis lacinia nisi vitae
-                        rutrum.</p>
+                    <p>
+                        <strong>Constituição Federal - Artigo 37º</strong> administração pública direta e indireta de
+                        qualquer dos Poderes da União, dos Estados, do Distrito Federal e dos Municípios obedecerá aos
+                        <strong>princípios de legalidade, impessoalidade, moralidade, publicidade e
+                            eficiência</strong><br /><br />
+                        <span>
+                            Princípio LIMPE<br />
+                            <strong>L</strong> - Legalidade<br />
+                            <strong>I</strong> - Impessoalidade<br />
+                            <strong>M</strong> - Moralidade<br />
+                            <strong>P</strong> - Publicidade<br />
+                            <strong>E</strong> - Eficiência
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </li>
+        <li class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Príncipios da Administração Pública descritos na Constituição Federal?</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>
+                        <strong>Constituição Federal - Artigo 37º</strong> administração pública direta e indireta de
+                        qualquer dos Poderes da União, dos Estados, do Distrito Federal e dos Municípios obedecerá aos
+                        <strong>princípios de legalidade, impessoalidade, moralidade, publicidade e
+                            eficiência</strong><br /><br />
+                        <span>
+                            Princípio LIMPE<br />
+                            <strong>L</strong> - Legalidade<br />
+                            <strong>I</strong> - Impessoalidade<br />
+                            <strong>M</strong> - Moralidade<br />
+                            <strong>P</strong> - Publicidade<br />
+                            <strong>E</strong> - Eficiência
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </li>
+        <li class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Príncipios da Administração Pública descritos na Constituição Federal?</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>
+                        <strong>Constituição Federal - Artigo 37º</strong> administração pública direta e indireta de
+                        qualquer dos Poderes da União, dos Estados, do Distrito Federal e dos Municípios obedecerá aos
+                        <strong>princípios de legalidade, impessoalidade, moralidade, publicidade e
+                            eficiência</strong><br /><br />
+                        <span>
+                            Princípio LIMPE<br />
+                            <strong>L</strong> - Legalidade<br />
+                            <strong>I</strong> - Impessoalidade<br />
+                            <strong>M</strong> - Moralidade<br />
+                            <strong>P</strong> - Publicidade<br />
+                            <strong>E</strong> - Eficiência
+                        </span>
+                    </p>
                 </div>
             </div>
         </li>
