:lipstick: Padronização de header

--- a/cartoes/index.html
+++ b/cartoes/index.html
@@ -188,8 +188,18 @@
         flex-direction: row;
         justify-content: flex-start;
         align-items: center;
-        color: var(--color-highlight);
+
         background-color: var(--color-background-header);
+    }
+
+    header a,
+    header a:hover,
+    header a:visited {
+        color: var(--color-text);
+    }
+
+    header a:hover {
+        text-decoration: underline;
     }
 
     header p {
@@ -301,9 +311,11 @@
                 </div>
                 <div class="flip-card-back">
                     <p>
-                        <strong>poder vinculado</strong> capacidade de agir <strong>SEM ESCOLHA</strong> com a descrição de todos os requisitos em lei com exaustão das descrições 
+                        <strong>poder vinculado</strong> capacidade de agir <strong>SEM ESCOLHA</strong> com a descrição
+                        de todos os requisitos em lei com exaustão das descrições
                         <br /><br />
-                        <strong>poder discricionário</strong> capacidade de agir <strong>COM ESCOLHA</strong> de competência e oportunidade do agente em prol do interesse público
+                        <strong>poder discricionário</strong> capacidade de agir <strong>COM ESCOLHA</strong> de
+                        competência e oportunidade do agente em prol do interesse público
                     </p>
                 </div>
             </div>
