:speech_balloon: Atualizar cartas de memorização

--- a/cartoes/index.html
+++ b/cartoes/index.html
@@ -112,7 +112,7 @@
     }
 
     .flip-card.highlighted {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         margin: 0;
@@ -176,8 +176,9 @@
         padding: 1.5rem;
 
         display: flex;
-        justify-content: flex-start;
-        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
         padding: 2.5rem 6rem;
     }
 
@@ -261,28 +262,15 @@
         </ul>
     </header>
     <h1>Flash Cards para memorização</h1>
-    <h2>Admninistração Pública</h2>
-    <ul>
+    <h2>Direito Administrativo</h2>
+  <ul>
         <li class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <h3>Príncipios da Administração Pública descritos na Constituição Federal?</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>
-                        <strong>Constituição Federal - Artigo 37º</strong> administração pública direta e indireta de
-                        qualquer dos Poderes da União, dos Estados, do Distrito Federal e dos Municípios obedecerá aos
-                        <strong>princípios de legalidade, impessoalidade, moralidade, publicidade e
-                            eficiência</strong><br /><br />
-                        <span>
-                            Princípio LIMPE<br />
-                            <strong>L</strong> - Legalidade<br />
-                            <strong>I</strong> - Impessoalidade<br />
-                            <strong>M</strong> - Moralidade<br />
-                            <strong>P</strong> - Publicidade<br />
-                            <strong>E</strong> - Eficiência
-                        </span>
-                    </p>
+                  <p style="column-count: 1"><strong>Constituição Federal - Artigo 37º </strong>administração pública direta e indireta de qualquer dos Poderes da União, dos Estados, do Distrito Federal e dos Municípios obedecerá aos <strong>princípios de legalidade, impessoalidade, moralidade, publicidade e eficiência</strong></p><p style="column-count: 1"></p><p style="column-count: 1">Princípio LIMPE</p><p style="column-count: 1"><strong>L</strong> - Legalidade</p><p style="column-count: 1"><strong>I </strong>- Impessoalidade</p><p style="column-count: 1"><strong>M</strong> - Moralidade</p><p style="column-count: 1"><strong>P</strong> - Publicidade</p><p style="column-count: 1"><strong>E</strong> - Eficiência</p>
                 </div>
             </div>
         </li>
@@ -292,15 +280,7 @@
                     <h3>Qual a diferença entre centralização / descentralização e concentração / desconcentração?</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>
-                        <strong>centralização/descentralização</strong> Criação de <strong>entidades</strong> com o
-                        controle/tutela do instituidor, sujeição <strong>não</strong> hierarquica, com a atribuição da
-                        execução dos serviços
-                        <br /><br />
-                        <strong>concentração/desconcentração</strong> Criação de <strong>orgãos públicos</strong> como
-                        centros de competência despersonalizadas, são unidades de atuação para manifestação da vontade
-                        do instituidor
-                    </p>
+                  <p style="column-count: 1"><strong>centralização/descentralização</strong> Criação de <strong>entidades</strong> com o controle/tutela do instituidor, sujeição <strong>não hierárquica</strong>, com a atribuição da execução dos serviços</p><p style="column-count: 1"></p><p style="column-count: 1"><strong>concentração/desconcentração</strong> Criação de <strong>orgãos públicos </strong>como centros de competência despersonalizadas, são unidades de atuação para manifestação da vontade do instituidor</p>
                 </div>
             </div>
         </li>
@@ -310,13 +290,40 @@
                     <h3>Qual a diferença entre poder vinculado e poder discricionário?</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>
-                        <strong>poder vinculado</strong> capacidade de agir <strong>SEM ESCOLHA</strong> com a descrição
-                        de todos os requisitos em lei com exaustão das descrições
-                        <br /><br />
-                        <strong>poder discricionário</strong> capacidade de agir <strong>COM ESCOLHA</strong> de
-                        competência e oportunidade do agente em prol do interesse público
-                    </p>
+                  <p style="column-count: 1"><strong>poder vinculado</strong> </p><p style="column-count: 1">capacidade de agir <strong>SEM ESCOLHA</strong> com a descrição de todos os requisitos em lei com exaustão das descrições</p><p style="column-count: 1"></p><p style="column-count: 1"><strong>poder discricionário</strong> </p><p style="column-count: 1">capacidade de agir <strong>COM ESCOLHA</strong> de competência e oportunidade do agente em prol do interesse público</p>
+                </div>
+            </div>
+        </li>
+    </ul>
+    <h2>Noções de Criminologia</h2>
+  <ul>
+        <li class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Tipos de vítima do Mendeshon</h3>
+                </div>
+                <div class="flip-card-back">
+                  <p style="column-count: 1"><strong>vítima ideal ou inocente</strong></p><p style="column-count: 1">não tem nenhuma participação no evento;</p><p style="column-count: 1"></p><p style="column-count: 1"><strong>vítima menos culpada que o delinquente</strong></p><p style="column-count: 1">vítima por ignorância, contribui com o resultado danoso;</p><p style="column-count: 1"></p><p style="column-count: 1"><strong>vítima tão culpada quanto o delinquente</strong></p><p style="column-count: 1">provocadora, sem a provocação o crime não ocorreria;</p><p style="column-count: 1"></p><p style="column-count: 1"><strong>vítima mais culpada que o delinquente</strong></p><p style="column-count: 1">participação da vítima é maior que o delinquente, após injusta provocação;</p><p style="column-count: 1"></p><p style="column-count: 1"><strong>vítima como única culpada</strong></p><p style="column-count: 1">única pessoa culpada do evento criminoso.</p>
+                </div>
+            </div>
+        </li>
+        <li class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Camadas de controle social formal</h3>
+                </div>
+                <div class="flip-card-back">
+                  <p style="text-align: justify; column-count: 1"><strong>primeira instância:</strong> policia, órgãos de repressão;</p><p style="text-align: justify; column-count: 1"><strong>segunda instância:</strong> Ministério Público, ingressar com ação penal;</p><p style="text-align: justify; column-count: 1"><strong>terceira instância:</strong> Poder Judiciário, segmento no processo penal;</p><p style="text-align: justify; column-count: 1"><strong>quarta instância (de fato):</strong> prisões, cumprimento de penas e ressocialização.</p>
+                </div>
+            </div>
+        </li>
+        <li class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Classificação de criminosos por Enrico Ferri</h3>
+                </div>
+                <div class="flip-card-back">
+                  <p style="text-align: justify; column-count: 1">criminoso nato;</p><p style="text-align: justify; column-count: 1">criminoso louco, incluir semilouco e fronteiriços;</p><p style="text-align: justify; column-count: 1">criminoso ocasional;</p><p style="text-align: justify; column-count: 1">criminoso habitual;</p><p style="text-align: justify; column-count: 1">criminoso passional.</p>
                 </div>
             </div>
         </li>
